--- a/index (1).html
+++ b/index (1).html
@@ -827,4 +827,72 @@
         });
     </script>
 </body>
-</html>
+
+</html><style>
+  /* Add this to your <head> styles */
+  .sigi-logo-wrapper { display: flex; align-items: center; justify-content: center; font-family: 'Plus Jakarta Sans', sans-serif; }
+  .sigi-pill { background-color: #ffffff; color: #000080; padding: 0.4rem 1.2rem; font-weight: 800; text-transform: uppercase; border: 2px solid #000080; z-index: 1; font-size: 0.9rem; }
+  .sigi-pill.left { border-radius: 50px 0 0 50px; margin-right: -15px; }
+  .sigi-pill.right { border-radius: 0 50px 50px 0; margin-left: -15px; }
+  .sigi-circle { background-color: #ffffff; color: #000080; border-radius: 50%; width: 100px; height: 100px; display: flex; flex-direction: column; align-items: center; justify-content: center; text-align: center; z-index: 2; border: 4px solid #ffffff; outline: 2px solid #000080; box-shadow: 0 0 0 6px #ffffff; }
+  .sigi-circle .main-txt { font-size: 1.8rem; font-weight: 800; line-height: 1; margin-bottom: 2px; }
+  .sigi-circle .sub-txt { font-size: 0.45rem; font-weight: 700; text-transform: uppercase; line-height: 1.2; }
+</style>
+
+<div class="sigi-logo-wrapper scale-75 md:scale-100">
+    <div class="sigi-pill left">Copy</div>
+    <div class="sigi-circle">
+        <span class="main-txt">Sigi</span>
+        <span class="sub-txt">Communication<br>Centre</span>
+    </div>
+    <div class="sigi-pill right">Scan</div>
+</div><div class="max-w-7xl mx-auto px-4 mt-12 mb-12">
+    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6">
+        <div class="bg-white p-6 rounded-2xl shadow-lg border-t-4 border-[#000080] hover:-translate-y-1 transition">
+            <h3 class="font-bold text-[#000080] text-lg mb-3">📍 Junction 14 Mall</h3>
+            <p class="text-sm text-gray-600 mb-2">Shop 25, Bullion Boulevard<br>Richards Bay</p>
+            <p class="text-sm text-gray-600 mb-1">📞 035 001 2396</p>
+            <p class="text-xs text-gray-500">✉️ sigicommunicationcentre@gmail.com</p>
+        </div>
+        <div class="bg-white p-6 rounded-2xl shadow-lg border-t-4 border-[#000080] hover:-translate-y-1 transition">
+            <h3 class="font-bold text-[#000080] text-lg mb-3">📍 Checkers Centre</h3>
+            <p class="text-sm text-gray-600 mb-2">Shop 02, Bullion Boulevard<br>Richards Bay</p>
+            <p class="text-sm text-gray-600 mb-1">📞 087 093 5187</p>
+            <p class="text-xs text-gray-500">✉️ sigicom554@gmail.com</p>
+        </div>
+        <div class="bg-white p-6 rounded-2xl shadow-lg border-t-4 border-[#000080] hover:-translate-y-1 transition">
+            <h3 class="font-bold text-[#000080] text-lg mb-3">📍 Esikhawini Mall</h3>
+            <p class="text-sm text-gray-600 mb-2">Shop 14, Mthombothi St<br>Esikhawini</p>
+            <p class="text-sm text-gray-600 mb-1">📞 035 001 0456</p>
+            <p class="text-xs text-gray-500">✉️ sigicom55@gmail.com</p>
+        </div>
+        <div class="bg-white p-6 rounded-2xl shadow-lg border-t-4 border-[#000080] hover:-translate-y-1 transition">
+            <h3 class="font-bold text-[#000080] text-lg mb-3">📍 Mbazwana Crossing Mall</h3>
+            <p class="text-sm text-gray-600 mb-2">Shop 8, Cnr R2Z & P447<br>Mbazwana Town</p>
+            <p class="text-sm text-gray-600 mb-1">📞 035 001 2397</p>
+            <p class="text-xs text-gray-500">✉️ mbazwanasigicopyscan@gmail.com</p>
+        </div>
+    </div>
+    
+    <div class="mt-10 bg-[#000080] text-white p-6 rounded-2xl text-center shadow-lg">
+        <p class="text-lg md:text-xl font-medium italic">"Never give up on your dreams! Let Sigi Communication Centre help you take the next step. 💼✨"</p>
+    </div>
+</div><style>
+  /* Add this to your <head> styles */
+  .sigi-logo-wrapper { display: flex; align-items: center; justify-content: center; font-family: 'Plus Jakarta Sans', sans-serif; }
+  .sigi-pill { background-color: #ffffff; color: #000080; padding: 0.4rem 1.2rem; font-weight: 800; text-transform: uppercase; border: 2px solid #000080; z-index: 1; font-size: 0.9rem; }
+  .sigi-pill.left { border-radius: 50px 0 0 50px; margin-right: -15px; }
+  .sigi-pill.right { border-radius: 0 50px 50px 0; margin-left: -15px; }
+  .sigi-circle { background-color: #ffffff; color: #000080; border-radius: 50%; width: 100px; height: 100px; display: flex; flex-direction: column; align-items: center; justify-content: center; text-align: center; z-index: 2; border: 4px solid #ffffff; outline: 2px solid #000080; box-shadow: 0 0 0 6px #ffffff; }
+  .sigi-circle .main-txt { font-size: 1.8rem; font-weight: 800; line-height: 1; margin-bottom: 2px; }
+  .sigi-circle .sub-txt { font-size: 0.45rem; font-weight: 700; text-transform: uppercase; line-height: 1.2; }
+</style>
+
+<div class="sigi-logo-wrapper scale-75 md:scale-100">
+    <div class="sigi-pill left">Copy</div>
+    <div class="sigi-circle">
+        <span class="main-txt">Sigi</span>
+        <span class="sub-txt">Communication<br>Centre</span>
+    </div>
+    <div class="sigi-pill right">Scan</div>
+</div>
